--- a/src/components/Tasks/Tasks.module.css
+++ b/src/components/Tasks/Tasks.module.css
@@ -7,13 +7,14 @@
 }
 .container{
     width: 100%;
-    height: 100%;
+    height: calc(100% - 75px);
     max-height: 100%;
     overflow-y: auto;
     display: flex;
     flex-direction: column;
     gap: 10px;
     padding: 20px;
+    padding-top: 0
 }
 .task{
     width: 100%;
@@ -61,4 +62,22 @@ button{
 .inputs button{
     width: 50px;
     height: 50px;
+}
+.header{
+    width: 100%;
+    height: 75px;
+    min-height: 75px;
+    max-height: 75px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 0 15px;
+}
+.header button{
+    background-color: transparent;
+    border: none;
+}
+.header button img{
+    height: 40px;
+    width: 40px
 }
