--- a/src/components/Tasks/Tasks.module.css
+++ b/src/components/Tasks/Tasks.module.css
@@ -4,6 +4,7 @@
     overflow: hidden;
     display: flex;
     flex-direction: column;
+    position: relative;
 }
 .container{
     width: 100%;
@@ -80,4 +81,62 @@ button{
 .header button img{
     height: 40px;
     width: 40px
+}
+
+
+/* new task */
+
+.new-task{
+    position: absolute;
+    bottom: 0px;
+    width: 100%;
+    height: 300px;
+    background-color: #0F0F0F;
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    padding: 10px;
+    position: absolute;
+    animation-name: showNewTask;
+    animation-duration: 0.1s;
+    border-radius: 5px;
+}
+@keyframes showNewTask {
+    from{
+        height: 0;
+        opacity: 0;
+    }
+    to{
+        height: 300px;
+        opacity: 1;
+    }
+}
+.new-task input{
+    height: 40px;
+    border: none;
+    border-radius: 5px;
+    color: black;
+    padding-left: 10px;
+    font-size: large;
+}
+#color-input{
+    padding: 0;
+}
+.new-task button{
+    background-color: #171717;
+    margin-top: auto;
+    margin-bottom: 25px;
+}
+.new-task .header{
+    width: 100%;
+    height: 50px;
+    min-height: 50px;
+    max-height: 50px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 0;
+}
+.new-task .header button{
+    background-color: transparent !important;
 }
