--- a/src/components/SideMenu/Settings/Settings.module.css
+++ b/src/components/SideMenu/Settings/Settings.module.css
@@ -9,6 +9,10 @@
     animation-name: openSettings;
     animation-duration: 0.1s;
     overflow: hidden;
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    align-items: flex-start;
 }
 button{
     background-color: transparent;
@@ -31,6 +35,7 @@ button{
 }
 .header{
     height: 50px;
+    width: 100%;
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -49,7 +54,22 @@ button{
     display: flex;
     flex-direction: column;
     gap: 5px;
+    height: fit-content;
 }
 .half-button-set{
-    width: 50%;
+    width: calc(50% - 5px);
+}
+.section{
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+.container{
+    height: calc(100% - 50px);
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    overflow-y: auto;
+    overflow-x: hidden;
 }
