--- a/src/components/SideMenu/Settings/Settings.module.css
+++ b/src/components/SideMenu/Settings/Settings.module.css
@@ -14,6 +14,11 @@
     gap: 10px;
     align-items: flex-start;
 }
+.container{
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+}
 button{
     background-color: transparent;
     border: 1px solid transparent;
@@ -56,8 +61,18 @@ button{
     gap: 5px;
     height: fit-content;
 }
+.half-button-set h2{
+    width: 100%;
+}
 .half-button-set{
     width: calc(50% - 5px);
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    gap: 5px;
+}
+.half-button-set button{
+    width: calc(50% - 10px);
 }
 .section{
     width: 100%;
