--- a/src/components/SideMenu/Workboard/Workboard.module.css
+++ b/src/components/SideMenu/Workboard/Workboard.module.css
@@ -13,7 +13,6 @@
     justify-content: space-between;
     border-radius: 5px;
     align-items: center;
-    
 }
 h4{
     margin-left: 15px;
@@ -27,8 +26,15 @@ p{
     justify-content: center;
     background-color: transparent;
 }
-
-
+.selected{
+    background-color: #0F0F0F !important;
+    border: 1px solid white;
+    
+}
+.selected p,
+.selected h4{
+    color: white !important;
+}
 
 
 
