Removed the border for the close button on New Project menu

--- a/src/components/SideMenu/Project/Project.module.css
+++ b/src/components/SideMenu/Project/Project.module.css
@@ -33,7 +33,9 @@ img{
 }
 .header button{
     background-color: transparent !important;
+    border: none;
 }
+
 fieldset{
     border: none;
     display: flex;
