--- a/src/components/Pomodoro/Pomodoro.module.css
+++ b/src/components/Pomodoro/Pomodoro.module.css
@@ -2,7 +2,6 @@
     height: 100%;
     width: 50%;
     display: grid;
-    grid-template-columns: 1fr 60px;
     grid-template-rows: 3fr 1fr;
     overflow: hidden;
     gap: 10px;
@@ -16,7 +15,6 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    grid-column: 1 / 2;
     grid-row: 1 / 2;
 }
 .timer-background{
@@ -54,25 +52,22 @@
 }
 
 
-
-
-
-.sessions-container{
-    width: 100%;
-    height: 100%;
+.summaries{
+    position: absolute;
+    left: 15px;
+    top: 15px;
     display: flex;
     flex-direction: column;
-    align-items: center;
-    gap: 15px;
-    grid-column: 2 / 3;
-    grid-row: 1 / 3;
-    border-left: 1px solid rgba(211, 211, 211, 0.1);
-    padding: 0 5px;
-    box-sizing: content-box;
-    position: relative;
-    overflow-y: auto;
-    overflow-x: hidden;
+    gap: 5px;
+    align-items: start;
 }
+.summaries p{
+    width: auto;
+    height: auto;
+}
+
+
+
 .total-time{
     position: sticky;
     bottom: 0;
@@ -90,40 +85,6 @@
 .total-time p:nth-child(2){
     opacity: 0.5;
 }
-.sessions-container .focus-session-square{
-    width: 50px;
-    height: 50px;
-    min-width: 50px;
-    min-height: 50px;
-    border-radius: 5px;
-    background-color: #0F0F0F;
-    display: flex;
-    flex-direction: column;
-}
-.sessions-container div p{
-    height: 100%;
-    width: 100%;
-    min-width: auto;
-    text-align: center;
-}
-.sessions-container .break-session-square{
-    height: 40px;
-    width: 40px;
-    min-width: 40px;
-    min-height: 40px;
-    font-size: 0.8rem;
-    overflow: hidden;
-    border-radius: 5px;
-    background-color: #0F0F0F;
-    display: flex;
-    flex-direction: column;
-}
-
-
-
-
-
-
 
 
 
@@ -133,7 +94,6 @@
     display: flex;
     flex-wrap: wrap;
     gap: 15px;
-    grid-column: 1 / 2;
     grid-row: 2 / 3;
     padding: 0 10px;
 }
@@ -154,7 +114,13 @@
     width: 30px;
     height: 30px;
 }
-
+.settings-button{
+    position: absolute;
+    right: 15px;
+    top: 15px;
+    background-color: transparent;
+    border: none;
+}
 
 
 
