--- a/src/components/MainPanel/Home/Home.module.css
+++ b/src/components/MainPanel/Home/Home.module.css
@@ -1,6 +1,12 @@
 
 
-
+.home{
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    height: calc(100vh - 70px);
+    min-height: 100%;
+}
 .top{
     width: 100%;
     height: 40px;
@@ -39,56 +45,41 @@
 .summary p{
     width: 50px;
 }
-/* calendar */
-.calendar-container{
-    width: 60%;
-    aspect-ratio: 1 / 1;
-    overflow: hidden;
-}
-.dark-calendar {
-    background-color: #171717;
-    color: #fff;
-    border: 1px solid transparent;
-    border-radius: 8px;
-}
-
-.dark-calendar abbr {
-    color: #fff !important;
-}
-
-.dark-calendar .react-calendar__navigation {
-    background: #292929;
-    border-bottom: 1px solid #444;
-}
-
-.dark-calendar .react-calendar__navigation button {
-color: #fff;
-}
-
-.dark-calendar .react-calendar__tile {
-    background: #292929;
-    color: #fff;
-}
-
-.dark-calendar .react-calendar__tile--active {
-    background: #444 !important;
-    color: #fff !important;
-}
-
-.dark-calendar .react-calendar__tile--now {
-    background: #555;
-    color: #fff;
-}
-
-.dark-calendar .react-calendar__month-view__days__day:hover {
-    background: #333;
-}
-  
-
-
-
 
 .habbit{
+    background-color: #0F0F0F;
+    width: 95%;
+    height: 110px;
+    margin-top: auto;
+    margin-bottom: 15px;
+    padding: 10px 0;
+    border-radius: 5px;
+    align-self: center;
+}
+.habbit h3{
+    padding-left: 10px;
+}
+.habbit-container{
     width: 100%;
     height: 75px;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+}
+.week-day{
+    height: 60px;
+    width: calc(100% / 8);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    background-color: #171717;
+    border-radius: 5px;
+    border: 2px solid transparent;
+}
+.week-day-name{
+    color: white;
+    opacity: 0.5;
+}
+.selected-day{
+    border: 2px solid rgba(211, 211, 211, 0.3);
 }
