--- a/src/components/MainPanel/Tasks/Tasks.module.css
+++ b/src/components/MainPanel/Tasks/Tasks.module.css
@@ -1,12 +1,33 @@
 .tasks{
-    height: 100%;
-    width: 50%;
+    height: calc(100vh - 70px);
+    width: 100%;
     overflow: hidden;
     display: flex;
     flex-direction: column;
     position: relative;
 }
+.header{
+    width: 100%;
+    height: 30px;
+    display: flex;
+    align-items: center;
+    padding: 0 15px;
+}
 
+.header .delete img{
+    height: 25px;
+    width: 25px;
+    margin-right: 20px;
+}
+.header button{
+    background-color: transparent;
+    border: none;
+    margin-left: auto;
+}
+.header button img{
+    height: 40px;
+    width: 40px
+}
 .container{
     width: 100%;
     height: calc(100% - 75px);
@@ -88,31 +109,8 @@ button{
     width: 50px;
     height: 50px;
 }
-.header{
-    width: 100%;
-    height: 75px;
-    min-height: 75px;
-    max-height: 75px;
-    display: flex;
-    align-items: center;
-    padding: 0 15px;
-}
-.header h2{
-    margin-right: auto;
-}
-.header .delete img{
-    height: 25px;
-    width: 25px;
-    margin-right: 20px;
-}
-.header button{
-    background-color: transparent;
-    border: none;
-}
-.header button img{
-    height: 40px;
-    width: 40px
-}
+
+
 
 
 /* new task */
@@ -170,4 +168,10 @@ button{
 }
 .new-task .header button{
     background-color: transparent !important;
+}
+
+.no-project-selected{
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
