--- a/src/components/MainPanel/Tasks/Tasks.module.css
+++ b/src/components/MainPanel/Tasks/Tasks.module.css
@@ -12,8 +12,11 @@
     display: flex;
     align-items: center;
     padding: 0 15px;
+    margin-bottom: 15px;
 }
-
+.header h3{ 
+    margin-right: auto;
+}
 .header .delete img{
     height: 25px;
     width: 25px;
@@ -22,7 +25,6 @@
 .header button{
     background-color: transparent;
     border: none;
-    margin-left: auto;
 }
 .header button img{
     height: 40px;
@@ -30,29 +32,49 @@
 }
 .container{
     width: 100%;
-    height: calc(100% - 75px);
+    height: 100%;
     max-height: 100%;
-    overflow-y: auto;
+    overflow-y: scroll !important;
     display: flex;
     flex-direction: column;
     gap: 10px;
     padding: 20px;
     padding-top: 0
 }
-.completed{
+.completed,
+.not-completed{
     width: 100%;
     height: auto;
     display: flex;
     flex-direction: column;
     gap: 10px;
 }
-
-.completed-container{
+.completed{
+    height: 30px;
+    min-height: 30px;
+    overflow: hidden;
+    transition: all 0.1s;
+}
+.completed.extend{
+    height: auto !important;
+    min-height: fit-content;
+    transition: all 0.1s;
+}
+.tasks-container{
     width: 100%;
     height: auto;
     display: flex;
     flex-direction: column;
     gap: 10px;
+}
+.tasks-container-header{
+    width: 100%;
+    height: 30px;
+    min-height: 30px;
+    overflow: hidden;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
 }
 .task{
     width: 100%;
@@ -110,7 +132,11 @@ button{
     height: 50px;
 }
 
-
+.no-project-selected{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
 
 
 /* new task */
@@ -170,8 +196,3 @@ button{
     background-color: transparent !important;
 }
 
-.no-project-selected{
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
