--- a/src/components/MainPanel/Tasks/Tasks.module.css
+++ b/src/components/MainPanel/Tasks/Tasks.module.css
@@ -17,7 +17,7 @@
 .header h3{ 
     margin-right: auto;
 }
-.header .delete img{
+.header .task-buttons img{
     height: 25px;
     width: 25px;
     margin-right: 20px;
