--- a/src/components/MainPanel/Tasks/Tasks.module.css
+++ b/src/components/MainPanel/Tasks/Tasks.module.css
@@ -41,24 +41,19 @@
     padding: 20px;
     padding-top: 0
 }
-.completed,
-.not-completed{
+.tasks-category{
     width: 100%;
-    height: auto;
+    height: 30px;
+    min-height: 30px;
     display: flex;
     flex-direction: column;
     gap: 10px;
-    transition: all 0.1s;
-}
-.completed{
-    height: 30px;
-    min-height: 30px;
     overflow: hidden;
     transition: all 0.1s;
 }
-.completed.extend{
+.tasks-category.extend{
     height: auto !important;
-    min-height: fit-content;
+    min-height: fit-content !important;
     transition: all 0.1s;
 }
 .tasks-container{
@@ -77,6 +72,7 @@
     align-items: center;
     justify-content: space-between;
 }
+
 .task{
     width: 100%;
     height: 50px;
