--- a/src/components/MainPanel/Home/Home.module.css
+++ b/src/components/MainPanel/Home/Home.module.css
@@ -6,6 +6,7 @@
     width: 100%;
     height: calc(100vh - 70px);
     min-height: 100%;
+    gap: 10px;
 }
 .top{
     width: 100%;
@@ -17,7 +18,9 @@
 .middle{
     display: flex;
     align-items: center;
-    gap: 20px;
+    gap: 10px;
+    padding: 0 10px;
+    flex-grow: 1;
 }
 .summaries{
     width: 40%;
@@ -26,17 +29,19 @@
     flex-direction: column;
     align-items: center;
     gap: 15px;
+    padding: 10px 0;
+    border-radius: 5px;
 }
+
 .summary{
-    width: 80%;
-    height: 50px;
-    background-color: #0F0F0F;
+    width: 100%;
     display: flex;
+    height: fit-content;
     align-items: center;
     justify-content: center;
     border-radius: 5px;
 }
-.summary h3{
+.summary h4{
     width: calc(100% - 50px);
     display: flex;
     align-items: center;
@@ -82,4 +87,45 @@
 }
 .selected-day{
     border: 2px solid rgba(211, 211, 211, 0.3);
+}
+
+
+/* pinned tasks */
+.pinned{
+    width: 60%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    background-color: #0F0F0F;
+    padding: 10px 5px;
+    border-radius: 5px;
+}
+.pinnted-tasks-container{
+    height: 100%;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+}
+.home-task{
+    width: 100%;
+    height: 50px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    background-color: #171717;
+    border-radius: 5px;
+    padding: 0 15px;
+}
+.home-task .task-title{
+    width: 100%;
+    justify-content: start;
+    height: fit-content;
+}
+.home-task .task-dueDate{
+    width: 100%;
+    opacity: 0.5;
+    justify-content: start;
+    height: fit-content;
 }
