--- a/src/components/MainPanel/Home/Home.module.css
+++ b/src/components/MainPanel/Home/Home.module.css
@@ -1,26 +1,30 @@
 
 
 .home{
-    display: flex;
-    flex-direction: column;
+    display: grid;
+    grid-template-rows: 30px 1fr 110px;
     width: 100%;
     height: calc(100vh - 70px);
     min-height: 100%;
     gap: 10px;
+    padding: 10px;
 }
 .top{
     width: 100%;
-    height: 40px;
+    height: 30px;
     display: flex;
     gap: 15px;
-    padding: 0 20px;
+    grid-row: 1 / 2;
 }
 .middle{
     display: flex;
     align-items: center;
     gap: 10px;
-    padding: 0 10px;
     flex-grow: 1;
+    height: 100%;
+    width: 100%;
+    overflow: hidden;
+    grid-row: 2 / 3;
 }
 .summaries{
     width: 40%;
@@ -51,15 +55,17 @@
     width: 50px;
 }
 
+
+/* habbit */
 .habbit{
     background-color: #0F0F0F;
-    width: 95%;
+    width: 100%;
     height: 110px;
     margin-top: auto;
     margin-bottom: 15px;
     padding: 10px 0;
     border-radius: 5px;
-    align-self: center;
+    grid-row: 3 / 4;
 }
 .habbit h3{
     padding-left: 10px;
@@ -107,6 +113,9 @@
     display: flex;
     flex-direction: column;
     gap: 10px;
+    overflow-y: auto;
+    overflow-x: hidden;
+    max-height: 100%;
 }
 .home-task{
     width: 100%;
