--- a/src/components/MainPanel/Home/Home.module.css
+++ b/src/components/MainPanel/Home/Home.module.css
@@ -4,58 +4,75 @@
     display: grid;
     grid-template-rows: 30px 1fr 110px;
     width: 100%;
-    height: calc(100vh - 70px);
-    min-height: 100%;
+    height: calc(100vh - 50px);
     gap: 10px;
     padding: 10px;
 }
 .top{
     width: 100%;
-    height: 30px;
+    height: 40px;
     display: flex;
-    gap: 15px;
     grid-row: 1 / 2;
+    padding: 0 15px;
 }
-.middle{
+.top .current-time{
+    width: 100%;
     display: flex;
     align-items: center;
-    gap: 10px;
-    flex-grow: 1;
-    height: 100%;
-    width: 100%;
-    overflow: hidden;
-    grid-row: 2 / 3;
+    justify-content: space-between;
 }
-.summaries{
-    width: 40%;
+.top .date{
+    display: flex;
+    gap: 10px;
+    align-items: center;
+}
+
+/* pinned tasks */
+.pinned{
+    width: 100%;
     height: 100%;
     display: flex;
     flex-direction: column;
-    align-items: center;
-    gap: 15px;
-    padding: 10px 0;
+    gap: 10px;
+    padding: 10px 5px;
     border-radius: 5px;
+    overflow: hidden;
+    grid-row: 2 / 3;
 }
-
-.summary{
+.pinned-tasks-container{
+    height: 100%;
     width: 100%;
     display: flex;
-    height: fit-content;
-    align-items: center;
-    justify-content: center;
-    border-radius: 5px;
+    flex-direction: column;
+    gap: 5px;
+    overflow-y: auto;
+    overflow-x: hidden;
 }
-.summary h4{
-    width: calc(100% - 50px);
+.home-task{
+    width: 100%;
+    height: 40px;
+    min-height: 40px;
     display: flex;
     align-items: center;
-    padding-left: 10px;
+    justify-content: space-between;
+    background-color: #0F0F0F;
+    border-radius: 5px;
+    padding: 0 15px;
 }
-.summary p{
-    width: 50px;
+.home-task .task-title{
+    width: auto;
+    max-width: calc(100% - 100px);
+    justify-content: start;
+    height: fit-content;
 }
-
-
+.home-task .task-dueDate{
+    width: 100px;
+    opacity: 0.5;
+    height: fit-content;
+    display: flex;
+    align-items: center;
+    justify-content: end;
+}
 /* habbit */
 .habbit{
     background-color: #0F0F0F;
@@ -96,45 +113,3 @@
 }
 
 
-/* pinned tasks */
-.pinned{
-    width: 60%;
-    height: 100%;
-    display: flex;
-    flex-direction: column;
-    gap: 10px;
-    background-color: #0F0F0F;
-    padding: 10px 5px;
-    border-radius: 5px;
-}
-.pinnted-tasks-container{
-    height: 100%;
-    width: 100%;
-    display: flex;
-    flex-direction: column;
-    gap: 10px;
-    overflow-y: auto;
-    overflow-x: hidden;
-    max-height: 100%;
-}
-.home-task{
-    width: 100%;
-    height: 50px;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    background-color: #171717;
-    border-radius: 5px;
-    padding: 0 15px;
-}
-.home-task .task-title{
-    width: 100%;
-    justify-content: start;
-    height: fit-content;
-}
-.home-task .task-dueDate{
-    width: 100%;
-    opacity: 0.5;
-    justify-content: start;
-    height: fit-content;
-}
