--- a/src/components/MainPanel/Tasks/Tasks.module.css
+++ b/src/components/MainPanel/Tasks/Tasks.module.css
@@ -153,6 +153,16 @@ button{
     animation-duration: 0.1s;
     border-radius: 5px;
 }
+.new-task-header{
+    height: 30px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+.new-task-header button{
+    border: 1px solid transparent;
+    background-color: transparent !important;
+}
 @keyframes showNewTask {
     from{
         height: 0;
@@ -163,7 +173,8 @@ button{
         opacity: 1;
     }
 }
-.new-task input{
+.new-task input,
+.new-task #pin-task-input{
     height: 40px;
     border: none;
     border-radius: 5px;
@@ -192,4 +203,19 @@ button{
 .new-task .header button{
     background-color: transparent !important;
 }
+.same-line-top{
+    width: 100%;
+    display: grid;
+    grid-template-columns: 4fr 1fr;
+    gap: 10px;
+}
+.same-line-bottom{
+    width: 100%;
+    display: grid;
+    grid-template-columns: 2fr 2fr 1fr;
+    gap: 10px;
+}
 
+#pin-task-input option{
+    color: black;
+}
