--- a/src/components/Pomodoro/Pomodoro.module.css
+++ b/src/components/Pomodoro/Pomodoro.module.css
@@ -9,6 +9,14 @@
     padding-right: 0;
     position: relative;
 }
+.top{
+    width: 100%;
+    height: 30px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding-right: 60px;
+}
 .timer{
     height: 100%;
     width: 100%;
