--- a/src/components/SideMenu/Settings/Settings.module.css
+++ b/src/components/SideMenu/Settings/Settings.module.css
@@ -3,6 +3,7 @@
     left: 100%;
     top: 0;
     height: 100%;
+    max-height: 100vh;
     width: 70vw;
     background-color: #171717;
     padding: 10px;
