--- a/src/App.css
+++ b/src/App.css
@@ -8,6 +8,7 @@
 .App{
     height: var(--app-height);
     max-height: 100vh;
+    max-width: 100vw;
     width: 100vw;
     max-width: 100vw;
     display: flex;
