--- a/src/components/SideMenu/Settings/Settings.module.css
+++ b/src/components/SideMenu/Settings/Settings.module.css
@@ -24,10 +24,10 @@ button{
     background-color: transparent;
     border: 1px solid transparent;
     background-color: #0F0F0F;
-    height: 50px;
+    height: 40px;
     border-radius: 5px;
-    font-size: 1.5rem;
-    font-weight: 500;
+    font-size: 20px;
+    padding: 0 10px;
 }
 @keyframes openSettings {
     from{
@@ -54,38 +54,21 @@ button{
     height: 40px;
     width: 40px;
 }
-
-.button-set,
-.half-button-set{
-    display: flex;
-    flex-direction: column;
-    gap: 5px;
-    height: fit-content;
-}
-.half-button-set h2{
-    width: 100%;
-}
-.half-button-set{
-    width: calc(50% - 5px);
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    gap: 5px;
-}
-.half-button-set button{
-    width: calc(50% - 10px);
-}
-.section{
-    width: 100%;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-}
 .container{
-    height: calc(100% - 50px);
+    height: auto;
     width: 100%;
     display: flex;
-    flex-direction: column;
     overflow-y: auto;
     overflow-x: hidden;
+    flex-wrap: wrap;
+    gap: 10px;
+}
+.setting{
+    min-width: calc(50% - 10px);
+    max-width: 100%;
+    display: flex;
+    align-items: center;
+    width: fit-content;
+    gap: 10px;
+    height: 40px;
 }
