--- a/src/components/SideMenu/Workboard/Workboard.module.css
+++ b/src/components/SideMenu/Workboard/Workboard.module.css
@@ -39,9 +39,16 @@ h4{
     width: 100%;
     height: auto;
 }
-
-
-
+.new-project-button{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 10px;
+    width: 90%;
+    height: 40px;
+    align-self: center;
+    border: 1px solid rgba(211, 211, 211, 0.1);
+}
 
 
 
