--- a/src/components/Pomodoro/Pomodoro.module.css
+++ b/src/components/Pomodoro/Pomodoro.module.css
@@ -41,7 +41,7 @@
 }
 .timer-content{
     width: calc(100% - 10px);
-    height: calc(100% - 10px);;
+    height: calc(100% - 10px);
     background-color: #171717;
     border-radius: 50%;
     display: flex;
@@ -51,7 +51,7 @@
     gap: 10px;
 }
 .timer-content .time{
-    font-size: 2rem;
+    font-size: 50px;
 }
 .timer-content button{
     width: 75px;
@@ -90,7 +90,7 @@
     height: 50px;
     display: flex;
     flex-wrap: wrap;
-    gap: 15px;
+    gap: 5px;
     grid-row: 2 / 3;
     padding: 0 10px;
 }
@@ -102,11 +102,9 @@
     background-color: #0F0F0F;
 }
 .buttons .small-button{
-    width: calc((100% / 3) - 10px);
+    width: calc((100% / 4) - 10px);
 }
-.buttons .big-button{
-    width: calc(50% - 8px);
-}
+
 .buttons .small-button img{
     width: 30px;
     height: 30px;
