Added a subtle animation on button press for the pomodoro timer, added a flashing animation for when the session is finished and added an option to disable all pomodoro timer pop-up notifications from the settings and replaced all instanced of setMessage to a sendNotification function so that I can first check if notifications are enabled or not

--- a/src/components/Pomodoro/Pomodoro.module.css
+++ b/src/components/Pomodoro/Pomodoro.module.css
@@ -101,10 +101,25 @@
     justify-content: center;
     background-color: #0F0F0F;
 }
-.buttons .small-button{
+.buttons .small-button {
     width: calc((100% / 4) - 10px);
+    transition: all 0.1s;
+    background-color: #0F0F0F;
 }
 
+.buttons .small-button:active {
+    animation-name: buttonPressAnimation;
+    animation-duration: 0.2s;
+    transform: scale(0.95);
+}
+@keyframes buttonPressAnimation {
+    from{
+        background-color: #FF8C00;
+    }
+    to{
+        background-color: #FF8C00;
+    }
+}
 .buttons .small-button img{
     width: 30px;
     height: 30px;
