--- a/src/components/Pomodoro/Pomodoro.module.css
+++ b/src/components/Pomodoro/Pomodoro.module.css
@@ -202,6 +202,7 @@
     display: flex;
     gap: 10px;
     align-items: center;
+    justify-content: start;
 }
 .settings-section .top input,
 .settings-section option,
