Added an orange bg color for the counter of the current session, moved counters between the time and current session, added an action element that shows what happened (ex session ended, paused, skipped, etc), added a totalTimeElapsed that tracks how much time actually elapsed while the timer was active and added it to the data that it logs at the end of work session

--- a/src/components/Pomodoro/Pomodoro.module.css
+++ b/src/components/Pomodoro/Pomodoro.module.css
@@ -96,7 +96,15 @@
 .total-time p:nth-child(2){
     opacity: 0.5;
 }
-
+.sessions-counter{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 5px;
+}
+.current-section-counter{
+    color: #ff4500 !important;
+}
 
 
 .buttons{
