--- a/src/components/MainPanel/Home/Home.module.css
+++ b/src/components/MainPanel/Home/Home.module.css
@@ -85,16 +85,22 @@
     padding: 10px 0;
     border-radius: 5px;
     grid-row: 3 / 4;
+    gap: 15px;
+    display: flex;
+    flex-direction: column;
 }
 .habbit h3{
     padding-left: 10px;
 }
 .habbit-container{
     width: 100%;
-    height: 75px;
+    height: 50px;
     display: flex;
     justify-content: space-evenly;
     align-items: center;
+    background-color: #0F0F0F;
+    border-radius: 5px;
+    align-self: center;
 }
 .week-day{
     height: 50px;
@@ -103,16 +109,15 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    background-color: #0F0F0F;
     border-radius: 5px;
-    border: 2px solid transparent;
 }
 .week-day-name{
     color: white;
-    opacity: 0.5;
+    opacity: 0.7;
 }
-.selected-day{
-    border: 2px solid rgba(211, 211, 211, 0.3);
+.selected-day p{
+    color: #ff4400;
+    opacity: 1;
 }
 
 
