--- a/src/components/SideMenu/Workboard/Workboard.module.css
+++ b/src/components/SideMenu/Workboard/Workboard.module.css
@@ -45,7 +45,8 @@ h4{
     justify-content: center;
     gap: 10px;
     width: 90%;
-    height: 40px;
+    min-width: 50px;
+    height: 50px;
     align-self: center;
     border: 1px solid rgba(211, 211, 211, 0.1);
 }
