--- a/src/components/SideMenu/Settings/Settings.module.css
+++ b/src/components/SideMenu/Settings/Settings.module.css
@@ -15,11 +15,7 @@
     gap: 10px;
     align-items: flex-start;
 }
-.container{
-    display: flex;
-    flex-direction: column;
-    gap: 10px;
-}
+
 button{
     background-color: transparent;
     border: 1px solid transparent;
@@ -59,13 +55,13 @@ button{
     width: 100%;
     display: flex;
     overflow-y: auto;
+    flex-direction: column;
     overflow-x: hidden;
-    flex-wrap: wrap;
     gap: 10px;
+    padding-left: 10px;
 }
 .setting{
-    min-width: calc(50% - 10px);
-    max-width: 100%;
+    width: 100%;
     display: flex;
     align-items: center;
     width: fit-content;
