Added a new 'extended-workboard' class to the workboard, started working on a new portrait orientation layout for the whole app, added new sized to the timer to fit multiple screen sizes and shapes, and fix some other small styling issues

--- a/src/App.css
+++ b/src/App.css
@@ -16,3 +16,12 @@
     background-color: #171717;
     overflow: hidden !important;
 }
+@media (orientation: portrait) {
+    .App{
+        flex-wrap: wrap;
+        overflow-y: auto;
+        padding: 0;
+        padding-bottom: 60px;
+    }
+
+}
