--- a/src/components/MainPanel/MainPanel.module.css
+++ b/src/components/MainPanel/MainPanel.module.css
@@ -4,6 +4,7 @@
     overflow: hidden;
     display: flex;
     flex-direction: column;
+    min-width: 350px;
 }
 .navigation{
     width: 100%;
@@ -23,4 +24,10 @@
 .selected{
     border-bottom: 2px solid rgba(211, 211, 211, 0.3) !important;
 }
+@media (orientation: portrait) {
+    .mainPanel{
+        width: 100%;
+        height: calc(50vh - 30px);
+    }
 
+}
