--- a/src/components/MainPanel/Tasks/Tasks.module.css
+++ b/src/components/MainPanel/Tasks/Tasks.module.css
@@ -13,6 +13,7 @@
     align-items: center;
     padding: 0 15px;
     margin-bottom: 15px;
+    margin-top: 10px;
 }
 .header h3{ 
     margin-right: auto;
@@ -181,7 +182,9 @@ button{
     }
 }
 .new-task input,
-.new-task #pin-task-input{
+.new-task #pin-task-input,
+.new-task select,
+.new-task option{
     height: 40px;
     border: none;
     border-radius: 5px;
@@ -192,8 +195,9 @@ button{
 #color-input{
     padding: 0;
 }
-.new-task button{
+.new-task .save-button{
     background-color: #171717;
+    color: white;
     margin-top: auto;
     margin-bottom: 25px;
 }
@@ -225,4 +229,21 @@ button{
 
 #pin-task-input option{
     color: black;
+}
+
+
+
+
+
+@media (orientation: portrait) {
+    .tasks{
+        height: calc(50vh - 70px);
+        max-height: calc(50vh - 70px);
+    }
+    .new-task{
+        width: 100%;
+        height: 100%;
+        left: 0;
+    }
+
 }
