--- a/src/components/Pomodoro/Pomodoro.module.css
+++ b/src/components/Pomodoro/Pomodoro.module.css
@@ -23,15 +23,17 @@
 
 .timer{
     height: 100%;
+    max-height: calc(100% - 75px);
     width: 100%;
     display: flex;
     align-items: center;
     justify-content: center;
     grid-row: 1 / 2;
+    overflow: hidden;
 }
 .timer-background{
     background-color: white;
-    width: auto;
+    width: 100%;
     height: 100%;
     aspect-ratio: 1 / 1;
     border-radius: 50%;
@@ -221,4 +223,53 @@
     border-radius: 5px;
     padding-left: 10px;
     color: black;
+}
+
+
+
+
+
+
+/* media queries */
+
+@media (orientation: landscape) {
+    
+    .timer{
+        max-height: calc(100% - 150px);
+        height: 100%;
+        width: auto;
+        aspect-ratio: 1 / 1;
+    }
+    .timer-background{
+        width: auto;
+        min-width: calc(100vh - 150px);
+        height: 100%;
+    }
+
+}
+@media (orientation: portrait) {
+    .pomodoro{
+        width: 100%;
+        max-width: 100%;
+        height: calc(50vh - 30px);
+        border-top: 1px solid rgba(211, 211, 211, 0.1);
+    }
+    .buttons{
+        width: 100%;
+        height: 75px;
+        justify-content: center;
+    }
+    .buttons .small-button{
+        width: 50px;
+        height: 50px;
+    }
+    .timer{
+        height: calc(100% - 75px);
+        max-height: calc(100% - 75px);
+    }
+    .timer-background{
+        height: 100%;
+        max-height: 100%;
+        width: auto;
+    }
 }
