--- a/src/components/SideMenu/SideMenu.module.css
+++ b/src/components/SideMenu/SideMenu.module.css
@@ -34,8 +34,6 @@
 
 
 
-
-
 .expand .buttons button{
     height: 60px;
     width: 60px;
@@ -73,3 +71,62 @@
 .expand .menu-button{
     display: flex;
 }
+
+
+
+@media (orientation: portrait) {
+
+    .sideMenu{
+        top: auto;
+        bottom: 0;
+        width: 100vw;
+        height: 60px;
+        flex-direction: row;
+        border-top: 1px solid rgba(211, 211, 211, 0.2);
+        align-items: center;
+    }
+    .buttons{
+        width: 50px;
+        margin: 0;
+        margin-right: 10px;
+    }
+    .fullscreen-button{
+        margin: 0;
+        margin-left: 10px;
+    }
+    .sideMenu.expand{
+        width: 100vw;
+        height: 50vh;
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        grid-template-rows: 60px 1fr;
+        gap: 10px;
+    }
+    .expand .buttons{
+        grid-column: 2 / 3;
+        grid-row: 1 / 2;
+        width: 100%;
+        height: 100%;
+        justify-content: end;
+        padding-right: 10px;
+    }
+    .expand .buttons button{
+        height: 50px;
+        width: 50px;
+        min-height: 50px;
+        min-width: 50px;
+    }
+    .expand .fullscreen-button{
+        grid-column: 1 / 2;
+        grid-row: 1 / 2;
+        width: 50px;
+        height: 50px;
+        margin: 0;
+        margin-left: 10px;
+        align-self: center;
+    }
+    .expand .fullscreen-button p{
+        display: none;
+    }
+}
+
