--- a/src/components/SideMenu/Workboard/Workboard.module.css
+++ b/src/components/SideMenu/Workboard/Workboard.module.css
@@ -51,5 +51,50 @@ h4{
     border: 1px solid rgba(211, 211, 211, 0.1);
 }
 
+@media (orientation: portrait) {
 
+    .workboard{
+        flex-direction: row;
+        width: calc(100vw - 120px);
+        height: 100%;
+        overflow-y: hidden;
+        overflow-x: auto;
+        grid-column: 1 / 3;
+        grid-row: 2 / 3;
+    }
+    .item{
+        height: 40px;
+        width: 40px;
+    }
+    .item p{
+        height: 100%;
+        width: 100%;
+        min-height: 100%;
+        min-width: 100%;
+    }
+    .new-project-button{
+        display: none;
+    }
+    .workboard.expanded-workboard{
+        width: 100vw;
+        height: 100%;
+        flex-direction: column;
+        align-items: center;
+    }
+    .expanded-workboard .new-project-button{
+        width: 90%;
+        display: flex;
+    }
+    .expanded-workboard .item{
+        width: 95%;
+        height: 50px;
+    }
+    .expanded-workboard .item p{
+        height: fit-content;
+        width: fit-content;
+        min-height: 50px;
+        min-width: 50px;
+    }
+
+}
 
