Added a transofrm rotateZ to that arrow on portrait orientation

--- a/src/components/SideMenu/SideMenu.module.css
+++ b/src/components/SideMenu/SideMenu.module.css
@@ -128,5 +128,8 @@
     .expand .fullscreen-button p{
         display: none;
     }
+    .toggle-button img{
+        transform: rotateZ(-90deg);
+    }
 }
 
