--- a/src/components/MainPanel/Tasks/Tasks.module.css
+++ b/src/components/MainPanel/Tasks/Tasks.module.css
@@ -98,6 +98,8 @@
 .task input{
     height: 30px;
     width: 30px;
+    min-height: 30px;
+    min-width: 30px;
 }
 .task p{
     background-color: transparent;
