--- a/src/components/SideMenu/Workboard/Workboard.module.css
+++ b/src/components/SideMenu/Workboard/Workboard.module.css
@@ -13,6 +13,12 @@
     justify-content: space-between;
     border-radius: 5px;
     align-items: center;
+    aspect-ratio: 1 / 1;
+    width: 50px;
+    height: 50px;
+}
+.expanded-workboard .item{
+    width: 100%;
 }
 h4{
     margin-left: 15px;
