--- a/src/components/MainPanel/Home/Home.module.css
+++ b/src/components/MainPanel/Home/Home.module.css
@@ -48,6 +48,7 @@
     overflow-y: auto;
     overflow-x: hidden;
 }
+
 .home-task{
     width: 100%;
     height: 40px;
@@ -65,13 +66,10 @@
     justify-content: start;
     height: fit-content;
 }
-.home-task .task-dueDate{
-    width: 100px;
-    opacity: 0.5;
-    height: fit-content;
-    display: flex;
-    align-items: center;
-    justify-content: end;
+.home-task .color{
+    width: 10px;
+    height: 10px;
+    border-radius: 50%;
 }
 .home .no-tasks-message{
     margin-left: 15px;
