Removed the background for Fullscreen button

--- a/src/components/SideMenu/SideMenu.module.css
+++ b/src/components/SideMenu/SideMenu.module.css
@@ -26,6 +26,7 @@
     align-items: center;
     justify-content: center;
     gap: 20px;
+    background-color: transparent;
 }
 .expand .fullscreen-button{
     width: calc(100% - 10px);
