--- a/src/components/MainPanel/Tasks/Tasks.module.css
+++ b/src/components/MainPanel/Tasks/Tasks.module.css
@@ -81,7 +81,6 @@
     display: flex;
     align-items: center;
     gap: 10px;
-    background-color: #444444;
     padding: 10px;
     border-radius: 5px;
     border: 2px solid transparent;
@@ -89,17 +88,26 @@
 }
 .color{
     width: 10px;
-    height: 50px;
-    margin: -10px;
+    height: 10px;
+    min-width: 10px;
+    min-height: 10px;
+    border-radius: 50%;
 }
 .task.selected{
     border: 2px solid white;
 }
-.task input{
+.task input[type="checkbox"]{
     height: 30px;
     width: 30px;
     min-height: 30px;
     min-width: 30px;
+    border-radius: 10px;
+    background-color: transparent;
+    appearance: none;
+    border: 2px solid #fff
+}
+.task button{
+    background-color: transparent;
 }
 .task p{
     background-color: transparent;
