--- a/src/components/SideMenu/SideMenu.module.css
+++ b/src/components/SideMenu/SideMenu.module.css
@@ -36,10 +36,10 @@
 
 
 .expand .buttons button{
-    height: 60px;
-    width: 60px;
-    min-height: 60px;
-    min-width: 60px;
+    height: 50px;
+    width: 50px;
+    min-height: 50px;
+    min-width: 50px;
     transition: all 0.1s;
 }
 .buttons{
@@ -68,12 +68,18 @@
 }
 .toggle-button{
     display: flex !important;
+    background-color: transparent !important;
 }
 .expand .menu-button{
     display: flex;
 }
-
-
+.expand .toggle-button{
+    background-color: #0F0F0F !important;
+}
+.expand .buttons{
+    justify-content: space-between;
+    padding: 0 10px;
+}
 
 @media (orientation: portrait) {
 
