--- a/src/components/SideMenu/Settings/Settings.module.css
+++ b/src/components/SideMenu/Settings/Settings.module.css
@@ -1,22 +1,31 @@
 .settings{
-    position: absolute;
-    left: 100%;
-    top: 0;
     height: 100%;
-    max-height: 100vh;
-    width: 70vw;
-    background-color: #171717;
+    max-height: calc(100vh - 75px);
+    width: 100%;
     padding: 10px;
-    animation-name: openSettings;
-    animation-duration: 0.1s;
-    overflow: hidden;
     display: flex;
     flex-direction: column;
     gap: 10px;
     align-items: flex-start;
 }
-
-button{
+.container{
+    height: 100%;
+    width: 100%;
+    display: flex;
+    overflow-y: auto;
+    overflow-x: hidden;
+    flex-direction: column;
+    gap: 10px;
+    padding-left: 10px;
+}
+.setting{
+    width: 100%;
+    height: auto;
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+}
+.setting button{
     background-color: transparent;
     border: 1px solid transparent;
     background-color: #0F0F0F;
@@ -24,65 +33,15 @@ button{
     border-radius: 5px;
     font-size: 20px;
     padding: 0 10px;
-}
-@keyframes openSettings {
-    from{
-        width: 0;
-        opacity: 0;
-    }
-    to{
-        width: 70vw;
-        opacity: 1;
-    }
-}
-.header{
-    height: 50px;
-    width: 100%;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-}
-.header button{
-    background-color: transparent;
-    border: none;
-}
-.header button img{
-    height: 40px;
-    width: 40px;
-}
-.container{
-    height: auto;
-    width: 100%;
-    display: flex;
-    overflow-y: auto;
-    overflow-x: hidden;
-    flex-direction: column;
-    overflow-x: hidden;
-    gap: 10px;
-    padding-left: 10px;
-}
-.setting{
-    width: 100%;
-    display: flex;
-    align-items: center;
     width: fit-content;
+}
+.setting-buttons{
+    width: 100%;
+    display: flex;
+    align-items: center;
     gap: 10px;
-    height: 40px;
 }
 
 
 
 
-
-@media (orientation: portrait) {
-
-    .settings{
-        width: 100vw;
-        height: 100vh;
-        z-index: 10;        
-        left: 0;
-        bottom: 0;
-        top: auto;
-    }
-
-}
