Changed pin icon, added an unpin icon and conditionally render the right one depending on if the task is pinned already or not

--- a/src/components/MainPanel/Tasks/Tasks.module.css
+++ b/src/components/MainPanel/Tasks/Tasks.module.css
@@ -134,6 +134,7 @@
 }
 .task button{
     background-color: transparent;
+    border: none;
 }
 .task p{
     background-color: transparent;
@@ -178,7 +179,10 @@ button{
     align-items: center;
     justify-content: center;
 }
-
+.pin-task-icon{
+    height: 20px;
+    width: 20px;
+}
 
 /* new task */
 
