Added margin right auto to the p element inside the header of tasks to keep all button to the right of the container

--- a/src/components/MainPanel/Tasks/Tasks.module.css
+++ b/src/components/MainPanel/Tasks/Tasks.module.css
@@ -18,6 +18,9 @@
 .header h3{ 
     margin-right: auto;
 }
+.tasks .header p{
+    margin-right: auto;
+}
 .header .task-buttons{
     margin-left: auto;
 }
