Added z-index 10 for new project screen to fix over elements from under it showing up

--- a/src/components/SideMenu/Project/Project.module.css
+++ b/src/components/SideMenu/Project/Project.module.css
@@ -9,6 +9,7 @@
     position: absolute;
     animation-name: showNewProject;
     animation-duration: 0.1s;
+    z-index: 10;
 }
 
 @keyframes showNewProject {
