--- a/src/App.css
+++ b/src/App.css
@@ -25,3 +25,13 @@
     }
 
 }
+.amoled{
+    background-color: #000000 !important;
+}
+.light{
+    background-color: white;
+    color: black !important;
+}
+.light p{
+    color: black !important;
+}
