--- a/src/components/MainPanel/MainPanel.module.css
+++ b/src/components/MainPanel/MainPanel.module.css
@@ -6,6 +6,9 @@
     flex-direction: column;
     min-width: 350px;
 }
+.mainPanel.extended{
+    width: calc(100% - 60px)
+}
 .navigation{
     width: 100%;
     height: 50px;
