--- a/src/components/Pomodoro/Pomodoro.module.css
+++ b/src/components/Pomodoro/Pomodoro.module.css
@@ -379,6 +379,7 @@
     .minimized-pomodoro .minimized-time{
         flex-direction: row;
         padding: 0 10px;
+        width: auto;
     }
     .minimized-pomodoro .maximize-button{
         margin: 0 15px;
