--- a/src/components/SideMenu/Settings/Settings.module.css
+++ b/src/components/SideMenu/Settings/Settings.module.css
@@ -47,6 +47,14 @@
         max-height: calc(50vh - 75px);
         padding-bottom: 50px;
     }
+    .settings.extended-settings{
+        height: 100%;
+        max-height: calc(100% - 120px);  
+    }
+    .settings.extended-settings .container{
+        height: 100%;
+        max-height: 100%;  
+    }
 }
 
 
