--- a/src/App.css
+++ b/src/App.css
@@ -12,7 +12,6 @@
     width: 100vw;
     max-width: 100vw;
     display: flex;
-    padding-left: 60px;
     background-color: #171717;
     overflow: hidden !important;
 }
@@ -34,4 +33,16 @@
 }
 .light p{
     color: black !important;
+}
+.icon{
+    width: 40px;
+    height: 40px;
+}
+.small-icon{
+    width: 25px;
+    height: 25px;
+}
+.medium-icon{
+    width: 30px;
+    height: 30px;
 }
