--- a/src/components/MainPanel/MainPanel.module.css
+++ b/src/components/MainPanel/MainPanel.module.css
@@ -7,6 +7,12 @@
     display: flex;
     flex-direction: column;
     min-width: 350px;
+    
+}
+.hide{
+    height: 0 !important;
+    overflow: hidden !important;
+    transition: all 0.1s;
 }
 .mainPanel.extended{
     width: calc(100% - 60px)
@@ -17,6 +23,7 @@
     display: flex;
     align-items: center;
     gap: 10px;
+    transition: all 0.1s;
 }
 .mainPanel .fullscreen-button{
     height: 50px;
